Bug 95936 - Shortcut in tooltip not updated after changing the command's shortcut
Summary: Shortcut in tooltip not updated after changing the command's shortcut
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Juergen Funk
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: Shortcuts-Accelerators Toolbars-Tooltips
  Show dependency treegraph
 
Reported: 2015-11-19 15:22 UTC by Juergen Funk
Modified: 2023-02-09 15:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juergen Funk 2015-11-19 15:22:49 UTC
When you change the Shortcut Keys, then in the tooltip it is not update to the new one.
Go to Tools->Customise in the Customise-Dialog got to the Tab "Keyboard" for e.g. CTRL+F10 (that is the Non-printing Characters in Category "View") click "Delete" the Shortcut Key on CTRL-F10, select in Function "Non-printing Characters" go to CTRL-F5 and click "Modify", click "OK". Now when you go to the "Non-printing Characters"-Symbol in the toolbar, then it show always the old Shortcut, because the new one is working.
After a restart of LO you can see the new one.
Comment 1 A (Andy) 2015-11-19 22:05:03 UTC
Reproducible with LO 5.0.3.2, Win 8.1.
Comment 2 QA Administrators 2017-01-03 19:35:16 UTC Comment hidden (obsolete)
Comment 3 Juergen Funk 2017-01-12 12:07:29 UTC
Sorry but at the moment i have not a build for testing, but i think that is not solved (no commit for that).

But when you mean this bug ist not important, you can close but i think that is not nice for the GUI. I have not the deep insight of the point of source, maybe  Easy-hack? 

Juergen
Comment 4 QA Administrators 2018-01-13 03:30:33 UTC Comment hidden (obsolete)
Comment 5 Juergen Funk 2018-01-17 06:13:51 UTC
I have testing with master (aa02ed306f7c633bbffede16e44e8e736977ace4, debug), it is the same, no change for that.

Juergen
Comment 6 QA Administrators 2019-01-18 03:58:37 UTC Comment hidden (obsolete)
Comment 7 Juergen Funk 2019-01-18 09:33:48 UTC
The current master b8e450a54936560cdac00ab4c70ef80c20cfaf99 still has the same behavior.

A other solution, when change then we hint the user, the app need an restart.



I think we should not be close this bug
Comment 8 QA Administrators 2021-01-18 04:08:41 UTC Comment hidden (obsolete)
Comment 9 Juergen Funk 2021-01-20 04:49:08 UTC
I have tested with cf98f078b0a4e8c36cf0579042442e5583013608 (7.2) and the bug is always the same.

In dependency of that, i have using the CTRL-Tab but it doesn't work (no hot-key, get only tabs in document), i think it is a bad idea with this hard define list of hot-keys, is worthy of improvement
Comment 10 QA Administrators 2023-01-21 03:24:02 UTC Comment hidden (obsolete)
Comment 11 Juergen Funk 2023-02-09 06:35:09 UTC
Gerrit-Patch here https://gerrit.libreoffice.org/c/core/+/146678
Comment 12 Commit Notification 2023-02-09 15:27:11 UTC
Juergen Funk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7a851c5b2da723ca618061c12a14f11479748dfd

tdf#95936: Tooltip not updated in Toolbars after change Shortcut

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.