tdf#95936: Tooltip not updated in Toolbars after change Shortcut

The update of all toobars after change the shortcut was missing,
this patch update the toolbars now

Change-Id: Ibc896dc48c9143307b028a3c271476482111c2c5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146678
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>